<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_100"
        android:background="@color/bg_ViridianGreen"
        android:clipChildren="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_use_info_title"
            android:textSize="@dimen/text_headline"
            android:textColor="@android:color/white"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp_35"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_title1"
                android:textSize="@dimen/text_subheading"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_content1"
                android:textSize="@dimen/text_body"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_title2"
                android:textSize="@dimen/text_subheading"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_content2"
                android:textSize="@dimen/text_body"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_title3"
                android:textSize="@dimen/text_subheading"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_content3"
                android:textSize="@dimen/text_body"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_title4"
                android:textSize="@dimen/text_subheading"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_content4"
                android:textSize="@dimen/text_body"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_title5"
                android:textSize="@dimen/text_subheading"
                android:layout_marginTop="@dimen/margin_large"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_content5"
                android:textSize="@dimen/text_body"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:layout_marginBottom="@dimen/margin_large"/>

        </LinearLayout>

    </ScrollView>



</LinearLayout>