<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/info_all">

    <RelativeLayout
        android:id="@+id/app_info_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:src="@color/bg_ViridianGreen"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/nav_app_info"
            android:textColor="#fff"
            android:textSize="@dimen/text_headline"/>

        <ImageView
            android:id="@+id/easter_egg"
            android:layout_width="@dimen/dp_90"
            android:layout_height="@dimen/dp_90"
            android:src="@drawable/logo_big"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_200"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="@dimen/text_headline"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_340"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_info"
            android:textSize="@dimen/text_caption"
            android:textColor="@color/hintGray"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_380"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bug_info"
            android:textSize="@dimen/text_body"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp_100"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bug_submit"
            android:textSize="@dimen/text_body"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp_70"/>

    </RelativeLayout>

</RelativeLayout>